# Eon-Server

./: .gitignore  CMakeLists.txt  README.md  test  test.c  test.h
src/: CMakeLists.txt  main.c  packet_reader.h  test.c  test.h
src/networking/: CMakeLists.txt  network_server.c  network_server.h  networking.c  networking.h  packet.h  packet_queue.c  packet_queue.h
src/packets/: CMakeLists.txt  packet_reader.c  packet_reader.h  status_packet.h
src/packets/clientbound/: CMakeLists.txt  clientbound_packets.c  clientbound_packets.h  status_response.c  test.json
src/packets/serverbound/: CMakeLists.txt  handshake.c  serverbound_packets.c  serverbound_packets.h
src/packets/status/: CMakeLists.txt  handshake.c  handshake.h
src/varint/: varint.c  varint.h
